# peerjs-py

./: .gitignore  README.md  e2e-test.py  pyproject.toml  pytest.ini  setup.py
.github/: publish.yml
.github/workflows/: publish.yml  python-publish.yml
e2e/: e2e-test.py  package-lock.json  package.json  peerjs-py-server.py  run-e2e-test-py.sh  run-e2e.sh  tsconfig.json  wdio.local.conf.ts  wdio.shared.conf.js
e2e/js-client/: client.js  index.html
e2e/py-client/: client.py
e2e/tests/: compatibility.test.js
src/: __init__.py  api.py  base_connection.py  encodingQueue.py  enums.py  logger.py  mediaconnection.py  msgPackPeer.py  negotiator.py  option_interfaces.py  peer.py  peer_error.py  servermessage.py  socket.py  supports.py  test_package.py  util.py
src/binarypack/: binarypack.py
src/dataconnection/BufferedConnection/: BufferedConnection.py  Raw.py
src/dataconnection/StreamConnection/: MsgPack.py  StreamConnection.py
src/peerjs_py/: __init__.py  __main__.py  api.py  base_connection.py  encodingQueue.py  enums.py  logger.py  mediaconnection.py  msgPackPeer.py  negotiator.py  peer.py  peer_error.py  servermessage.py  socket.py  test_package.py  util.py
src/peerjs_py/binarypack/: bufferbuilder.py
src/peerjs_py/dataconnection/: DataConnection.py
src/peerjs_py/dataconnection/BufferedConnection/: BinaryPack.py  BufferedConnection.py  Json.py  Raw.py  (+1 more)
src/peerjs_py/utils/: random_token.py
src/utils/: validateId.py
tests/: disable_test_call.py  disable_util_stun_test.py  test_call.py  test_negotiator.py  test_peer.py  test_socket.py
(+2 files in other folders)
